# speed-to-lead-v5

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_VERIFY_CORE_PIPELINE.sh  CLAUDE_CODE_VERIFY_CORE_PIPELINE.txt  Dockerfile  NEXT_SESSION_PROMPT.md  PROMPT_FOR_CLAUDE_CODE.md  README.md  V5_BUILD_PLAN.md  V5_SESSION_DECISIONS.md  configure_twilio_sandbox.py  cookies.txt  deploy.json  form.json  login_page.html  render.yaml  requirements.txt  test_t2_ai_engine.py
v4 archived/Speed to Lead v4/: .clinerules  .env.example  .gitignore  AGENTS.md  CHECKLIST.md  Dockerfile  FEATURES.md  PIPELINE_BRAINSTORM_PROMPT.md  PLAN.md  README.md  SESSION_CONTEXT.md  alembic.ini  check3.py  check_after81.py  check_all_msgs.py  check_db_state.py  check_latest.py  check_messages.py  check_msgs2.py  fire_test.py  fire_webhook.py  fix_db_phones.py  fix_phones.py  fix_phones2.py  fix_test_bytes.py  fix_test_refs.py  hit3.py  hit_webhook.py  hit_webhook2.py  inspect_phones.py  pyproject.toml  render.yaml  requirements.txt  send_welcome.py  soul.md  start.sh  sweep_phones.py  test_ai_direct.py  test_full_pipeline.py
v4 archived/Speed to Lead v4/alembic/: env.py
v4 archived/Speed to Lead v4/app/: __init__.py  main.py  scheduler.py
v4 archived/Speed to Lead v4/dealers/: _schema.md  example-dealer.yaml  premier-auto.yaml  staging-demo.yaml
v4 archived/Speed to Lead v4/demo/: README.md  inventory.csv
v4 archived/Speed to Lead v4/docs/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-PIPELINE.md  03-BACKEND.md  04-FRONTEND.md  05-DEPLOYMENT.md  06-SKILLS.md  07-TASKS.md  08-TESTING-STRATEGY.md  (+7 more)
(+317 files in other folders)
