[project]
name = "speed-to-lead"
version = "0.1.0"
description = "Speed-to-lead response engine for small BC car dealerships (WAT-informed)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "twilio>=9.0",
    "openai>=1.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
# Inventory adapters that need extra parsing/extraction.
inventory = [
    "selectolax>=0.3",   # fast HTML parsing for structured-data/scrape adapters
    "extruct>=0.17",     # schema.org JSON-LD / microdata extraction
]
# Owner-report PDF builder (pure-Python so it works on Windows with no system libraries).
docs = [
    "markdown>=3.6",
    "xhtml2pdf>=0.2.16",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["app", "tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.pytest.ini_options]
testpaths = ["tests"]
collect_ignore_glob = ["speed to lead v3/*", "speed_to_lead_v3/*"]
